tests/sksl/errors/UnscopedVariableInWhile.glsl
### Compilation failed:

error: 2: variable 'b' must be created in a scope
    while (false) bool b;
                  ^^^^^^
1 error
